--- a/README
+++ b/README
@@ -8,9 +8,9 @@ deployment to multiple clouds.
 
 == What is this component
 
-The vmc-java repo contains a java client library for Cloud Foundry.
-The library provides a set of classes that ultimately call the core
-Cloud Foundry REST API.
+The vcap-java-client repo contains a java client library and tools for 
+Cloud Foundry. The library provides a set of classes that ultimately 
+call the core Cloud Foundry REST API.
 
 == License
 
